--- a/views/admin/posts.ejs
+++ b/views/admin/posts.ejs
@@ -13,18 +13,17 @@
     <!-- show when multiple checked -->
     <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
     <form class="form-inline">
-      <select name="" class="form-control input-sm">
-        <option value="">所有分类</option>
-        <option value="">未分类</option>
+      <select name="" class="form-control input-sm cateSelector">
+
       </select>
-      <select name="" class="form-control input-sm">
-        <option value="">所有状态</option>
-        <option value="">草稿</option>
-        <option value="">已发布</option>
+      <select name="" class="form-control input-sm statuSelector">
+        <option value="all">所有状态</option>
+        <option value="drafted">草稿</option>
+        <option value="published">已发布</option>
       </select>
-      <button class="btn btn-default btn-sm">筛选</button>
+      <input type="button" class="btn btn-default btn-sm btn-search" value="筛选">
     </form>
-    <ul class="pagination pagination-sm pull-right">
+    <ul class="pagination pagination-sm pull-right" style="float: right">
       <li><a href="#">上一页</a></li>
       <li><a href="#">1</a></li>
       <li><a href="#">2</a></li>
@@ -57,7 +56,7 @@
   <tr>
     <td class="text-center"><input type="checkbox"></td>
     <td>{{value.title}}</td>
-    <td>{[value.nackname]}</td>
+    <td>{{value.nickname}}</td>
     <td>{{value.name}}</td>
     <td class="text-center">{{value.created}}</td>
     <!-- 三元表达式 -->
@@ -67,6 +66,8 @@
       <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
     </td>
   </tr>
+  {{/each}}
 </script>
-<script src="../../assets/vendors/jquery/jquery.js"></script>
-<script src="../../assets/vendors/template/template.js"></script>
+<script src="/assets/vendors/bootstrappaginator/bootstrap-paginator.min.js"></script>
+<script src="/assets/vendors/template/template.js"></script>
+<script src="/assets/js/post.js"></script>
