实现数据筛选

--- a/views/admin/post-add.ejs
+++ b/views/admin/post-add.ejs
@@ -28,9 +28,10 @@
       </div>
       <div class="form-group">
         <label for="feature">特色图像</label>
-        <!-- show when image chose -->
+        <!-- 添加存储图片名称的隐藏域-->
+        <input type="hidden" name="feature" value="">
         <img class="help-block thumbnail" style="display: none">
-        <input id="feature" class="form-control" name="feature" type="file">
+        <input id="feature" class="form-control" type="file">
       </div>
       <div class="form-group">
         <label for="category">所属分类</label>
