--- a/views/admin/posts.ejs
+++ b/views/admin/posts.ejs
@@ -51,6 +51,7 @@
 </div>
 <%- include('./layouts/admin_aside.ejs'); %>
 <%- include('./layouts/admin_footer.ejs'); %>
+<script src="../../assets/js/aside.js"></script>
 <script type="text/template" id="postListTemp">
   {{each data as value index}}
   <tr>
