--- a/views/admin/layouts/admin_aside.ejs
+++ b/views/admin/layouts/admin_aside.ejs
@@ -35,3 +35,6 @@
         </li>
     </ul>
 </div>
+<script src="/assets/vendors/jquery/jquery.js"></script>
+<script src="/assets/js/common.js"></script>
+<script src="/assets/js/aside.js"></script>
